# BreakoutGame

./: .gitignore  CMakeLists.txt  Instructions.md  README.md
sdk/: CMakeLists.txt
sdk/include/sdk/: input.h  window.h
sdk/src/sdk/: input.cpp  window.cpp
src/: Ball.h  Brick.h  Constants.h  Paddle.h  main.cpp
test/: CMakeLists.txt  test_sdk.cpp
